Update Stream settings UI.

--- a/app/components-react/windows/settings/Appearance.m.less
+++ b/app/components-react/windows/settings/Appearance.m.less
@@ -20,6 +20,10 @@
       min-height: 39px;
     }
   }
+
+  :global(.ant-form-item) {
+    margin-bottom: 0px;
+  }
 }
 
 .apps-selector {
@@ -27,7 +31,12 @@
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin-bottom: 17px;
+  margin-top: 6px;
+
+  :global(.ant-form-item) {
+    margin-bottom: 0px;
+  }
 }
 
 .apps-dropdown {
