--- a/app/components-react/windows/settings/Stream.m.less
+++ b/app/components-react/windows/settings/Stream.m.less
@@ -2,6 +2,10 @@
 .stream-header-wrapper {
   display: flex;
   justify-content: space-between;
+
+  h2 {
+    margin-bottom: 0px;
+  }
 }
 
 .target-cards-wrapper {
@@ -57,16 +61,20 @@
   font-size: 14px;
   font-weight: 500;
 
-  border-bottom: 1px solid
-    linear-gradient(123.53deg, #2de8b0 0%, #cbe953 45%, #ffab48 65%, #ff5151 100%) !important;
   white-space: normal;
   background-image: linear-gradient(123.53deg, #2de8b0 0%, #cbe953 45%, #ffab48 65%, #ff5151 100%);
   background-clip: text;
   color: transparent;
 
   &:hover {
+    background-image: linear-gradient(
+      123.53deg,
+      #6effd2 0%,
+      #f6ff9a 45%,
+      #ffd48a 65%,
+      #ff8a8a 100%
+    );
     cursor: pointer;
-    opacity: 0.7;
   }
 }
 
@@ -146,11 +154,12 @@
 }
 
 .section {
-  padding-bottom: 1px;
+  margin-bottom: 15px !important;
 }
 
 .custom-destinations {
   margin: 15px 0px;
+  padding-bottom: 15px;
 }
 
 a.custom-dest {
