--- a/app/components-react/windows/go-live/RecordingSwitcher.m.less
+++ b/app/components-react/windows/go-live/RecordingSwitcher.m.less
@@ -13,4 +13,8 @@
   display: flex;
   justify-content: flex-start;
   flex: 1;
+
+  :global(.ant-switch-checked) {
+    background-color: var(--title);
+  }
 }
