--- a/app/components-react/windows/go-live/DestinationSwitchers.m.less
+++ b/app/components-react/windows/go-live/DestinationSwitchers.m.less
@@ -160,10 +160,6 @@
   margin-left: 5px;
 }
 
-.dual-output-logo {
-  margin-top: 5px;
-}
-
 .dual-output-display-selector {
   margin-bottom: 0px !important;
   display: flex;
@@ -176,11 +172,7 @@
   }
 }
 
-.single-output-logo {
-  margin-top: 3px;
-}
-
-.dual-output-platform-switch {
+.platform-switch-toggle {
   justify-self: flex-end;
   color: var(--background);
 
