--- a/app/components-react/shared/AddDestinationButton.m.less
+++ b/app/components-react/shared/AddDestinationButton.m.less
@@ -131,6 +131,7 @@ button.info-banner {
   width: calc(100% - 30px) !important;
 
   :global(.anticon.anticon-plus) {
+    font-size: 14px !important;
     color: var(--title) !important;
     padding-left: 65px !important;
   }
