--- a/app/components-react/shared/StreamSwitcherToggle.m.less
+++ b/app/components-react/shared/StreamSwitcherToggle.m.less
@@ -4,4 +4,13 @@
   align-items: center;
   font-size: 14px;
   color: var(--title);
+
+  :global(.ant-checkbox-wrapper) {
+    align-items: flex-start;
+  }
+}
+
+.label-ultra-badge {
+  display: flex;
+  align-items: center;
 }
