Non-ultra destination switchers.

--- a/app/components-react/windows/settings/Stream.m.less
+++ b/app/components-react/windows/settings/Stream.m.less
@@ -2,6 +2,7 @@
 .stream-header-wrapper {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 15px;
 
   h2 {
     margin-bottom: 0px;
@@ -57,7 +58,7 @@
 .ultra-text {
   display: flex;
   align-items: center;
-  margin: 15px 0px;
+  margin: 0px 0px 15px 0px;
   font-size: 14px;
   font-weight: 500;
 
