Refactor radio inputs for tests. WIP: dual output test.

--- a/app/components-react/windows/go-live/DestinationSwitchers.m.less
+++ b/app/components-react/windows/go-live/DestinationSwitchers.m.less
@@ -111,6 +111,10 @@
     min-width: 100px;
     text-align: right;
   }
+
+  :global(.ant-form-item-label) {
+    display: none;
+  }
 }
 
 .action-modal-logo {
