--- a/app/components-react/windows/go-live/DestinationSwitchers.m.less
+++ b/app/components-react/windows/go-live/DestinationSwitchers.m.less
@@ -5,39 +5,46 @@
   font-size: 34px;
 }
 .platform-logo-twitch {
-  font-size: 36px;
+  font-size: 34px;
 }
 .platform-logo-youtube {
-  font-size: 33px;
-  margin-top: 5px;
-  width: 36px;
-  height: 36px;
+  font-size: 31px;
+  margin-top: 9px;
+  width: 34px;
+  height: 34px;
 }
 .platform-logo-facebook {
-  font-size: 36px;
+  font-size: 34px;
 }
 .platform-logo-tiktok {
-  font-size: 36px;
+  font-size: 34px;
   margin-left: 5px;
-  width: 36px;
-  height: 36px;
+  width: 34px;
+  height: 34px;
 }
 .platform-logo-instagram {
-  font-size: 36px;
-  width: 36px;
-  height: 36px;
+  font-size: 34px;
+  width: 34px;
+  height: 34px;
 }
 .platform-logo-twitter {
   width: 32px;
   height: 32px;
 }
 .platform-logo-kick {
-  width: 36px;
-  height: 36px;
+  width: 34px;
+  height: 34px;
 }
 .platform-logo-trovo {
-  width: 36px;
-  height: 36px;
+  width: 34px;
+  height: 34px;
+}
+
+.platform-logo {
+  align-self: center;
+  display: flex;
+  margin-right: 10px;
+  min-width: 36px;
 }
 
 .platform-switcher {
@@ -52,10 +59,11 @@
   padding: 8px 10px;
 
   .col-input {
-    padding-top: 5px;
+    padding-top: 3px;
     padding-right: 16px;
     width: 52px;
   }
+
   .col-primary {
     color: var(--teal);
     text-align: center;
@@ -66,6 +74,7 @@
     max-width: 130px;
     text-overflow: ellipsis;
     overflow: hidden;
+    align-self: center;
     flex: 1;
   }
 
@@ -101,6 +110,10 @@
   line-height: 18px;
 }
 
+.display-selector-wrapper {
+  align-self: center;
+}
+
 .dual-output-display-selector {
   margin-bottom: 0px !important;
   display: flex;
@@ -115,6 +128,10 @@
   :global(.ant-form-item-label) {
     display: none;
   }
+
+  :global(.ant-radio-wrapper:last-child::after) {
+    display: none;
+  }
 }
 
 .action-modal-logo {
@@ -125,4 +142,32 @@
   margin-right: 8px;
   vertical-align: super;
   color: var(--title);
+}
+
+.connect-button {
+  align-self: center;
+}
+
+.info-alert {
+  color: #72d5ff;
+  width: 600px;
+  border-radius: 4px;
+  margin: 0 auto;
+  text-align: left !important;
+
+  :global(.ant-message-info) {
+    display: flex;
+    align-items: center;
+  }
+
+  :global(.ant-message-info .anticon) {
+    color: #72d5ff;
+    margin-right: 10px;
+  }
+}
+
+.alert-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
