Implemented Twitch dual streaming mode

--- a/app/components-react/windows/go-live/DestinationSwitchers.m.less
+++ b/app/components-react/windows/go-live/DestinationSwitchers.m.less
@@ -70,6 +70,7 @@
 .platform-disabled {
   opacity: 0.7;
   background: rgba(#2b383f, 0.3);
+  transition: background 0.4s ease-in-out;
 }
 
 .column-padding {
@@ -93,6 +94,7 @@
 .dual-output-platform-disabled {
   opacity: 0.7;
   background: rgba(#2b383f, 0.3);
+  transition: background 0.4s ease-in-out;
 }
 
 .dual-output-switcher-header {
