Fix load YouTube switched stream data, theme colors, and add loading spinner.

--- a/app/components-react/shared/inputs/SwitchInput.m.less
+++ b/app/components-react/shared/inputs/SwitchInput.m.less
@@ -72,7 +72,7 @@
   }
 
   &:global(.ant-switch-checked) {
-    background: var(--title);
+    background: var(--switch-active);
   }
 
   &:global(.ant-switch.ant-switch-checked .ant-switch-handle) {
