--- a/app/themes.g.less
+++ b/app/themes.g.less
@@ -75,6 +75,11 @@
   --prime-button: @dark-2;
   --tooltip-hover: @light-4;
   --modal-footer: @dark-2;
+  --icon-toggle: @light-4;
+  --icon-toggle-active: @dark-2;
+  --switch-active: @teal-light;
+  --secondary-bg: @light-3;
+  --secondary-checkbox: @dark-2;
 
   // 3rd Party Colors
   --twitch: @twitch;
@@ -159,6 +164,11 @@
   --prime-button: @dark-2;
   --tooltip-hover: @dark-5;
   --modal-footer: @dark-2;
+  --icon-toggle: @light-5;
+  --icon-toggle-active: @light-1;
+  --switch-active: @light-1;
+  --secondary-bg: @dark-2;
+  --secondary-checkbox: @light-1;
 
   // 3rd Party Colors
   --tiktok: @black;
@@ -227,6 +237,11 @@
   --prime-button: @dark-2;
   --tooltip-hover: @primedark-4;
   --modal-footer: @primedark-2;
+  --icon-toggle: @light-5;
+  --icon-toggle-active: @primelight-3;
+  --switch-active: @prime-dark;
+  --secondary-bg: @black;
+  --secondary-checkbox: @light-1;
 
   // 3rd Party Colors
   --tiktok: @black;
@@ -296,6 +311,11 @@
   --prime-button: @dark-2;
   --tooltip-hover: @primelight-4;
   --modal-footer: @primedark-2;
+  --icon-toggle: @light-4;
+  --icon-toggle-active: @dark-2;
+  --switch-active: @prime-light;
+  --secondary-bg: @primelight-1;
+  --secondary-checkbox: @dark-2;
 
   // 3rd Party Colors
   --tiktok-inverse: @black;
