--- a/app/components-react/windows/go-live/GoLive.m.less
+++ b/app/components-react/windows/go-live/GoLive.m.less
@@ -192,7 +192,7 @@ i.destination-logo {
   padding: 0px !important;
   display: flex;
   flex-direction: column;
-  background-color: var(--section);
+  background-color: var(--secondary-bg);
   justify-content: space-between;
 }
 
@@ -337,11 +337,18 @@ i.destination-logo {
   }
 }
 
+.feature-checkbox {
+  :global(.ant-checkbox-checked .ant-checkbox-inner) {
+    background-color: var(--secondary-checkbox);
+    border-color: var(--secondary-checkbox);
+  }
+}
+
 .primary-chat {
   border: 0px;
   padding-bottom: 10px;
   font-weight: 500;
-  color: var(--link-active);
+  color: var(--secondary-bg);
 
   :global(.ant-select:not(.ant-select-customize-input) .ant-select-selector) {
     border: 0px !important;
@@ -500,4 +507,8 @@ i.destination-logo {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.confirm-btn {
+  width: 141.25px;
 }
