Add ultra checks

--- a/app/components-react/shared/UltraBox.m.less
+++ b/app/components-react/shared/UltraBox.m.less
@@ -15,4 +15,5 @@
   background: linear-gradient(var(--background), var(--background)) padding-box, var(--ultra) border-box;
   border-radius: 6px;
   position: relative;
+  padding: 8px;
 }
