--- a/app/components-react/windows/settings/Mobile.m.less
+++ b/app/components-react/windows/settings/Mobile.m.less
@@ -1,4 +1,3 @@
-
 .device {
   padding: 8px;
   display: flex;
@@ -25,4 +24,19 @@
   input {
     cursor: text !important;
   }
+}
+
+.qr-code {
+  height: 100px;
+  width: 100px;
+}
+
+.badge {
+  margin-top: 16px;
+  height: 40px;
+  width: auto;
+}
+
+.ultra-box {
+  margin: 16px;
 }
