Highlighter and vertical recording handling.

--- a/app/components-react/shared/Modals.m.less
+++ b/app/components-react/shared/Modals.m.less
@@ -9,22 +9,25 @@
 }
 
 .action-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1003 !important; // show above resize bars
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
+  width: 100%;
+
   &:global(.ant-modal-confirm .ant-modal-body) {
     padding: 0px;
   }
 
   :global(div.ant-modal-content) {
     box-shadow: none;
-  }
-
-  :global(.ant-modal-confirm-body .ant-modal-confirm-title) {
-    display: inline-block;
-    font-size: 19px;
-    line-height: unset;
-  }
-
-  :global(.ant-modal-confirm-btns) {
-    display: none;
+    height: unset !important;
   }
 }
 
