--- a/app/components-react/windows/go-live/RecordingSwitcher.m.less
+++ b/app/components-react/windows/go-live/RecordingSwitcher.m.less
@@ -7,6 +7,10 @@
   i.info {
     margin-left: 10px;
   }
+
+  :global(div.ant-form-item) {
+    margin-right: 0px !important;
+  }
 }
 
 .recording-switcher {
