--- a/app/components-react/windows/go-live/GoLive.m.less
+++ b/app/components-react/windows/go-live/GoLive.m.less
@@ -192,7 +192,7 @@ i.destination-logo {
   padding: 0px !important;
   display: flex;
   flex-direction: column;
-  background-color: var(--secondary-bg);
+  background-color: var(--bg-column);
   justify-content: space-between;
 }
 
