--- a/app/styles/custom-icons.less
+++ b/app/styles/custom-icons.less
@@ -21,7 +21,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.icon-ai:before {
+  content: "\ea2f";
+}
 .icon-dual-output:before {
   content: '\ea2d';
 }
