--- a/app/components-react/shared/inputs/ImagePickerInput.m.less
+++ b/app/components-react/shared/inputs/ImagePickerInput.m.less
@@ -7,6 +7,7 @@
   grid-template-columns: repeat(auto-fit, 56px);
   grid-column-gap: 4px;
   grid-row-gap: 4px;
+  margin: 16px;
 }
 
 .image-option {
