Push graphical tweaks

--- a/app/components-react/windows/MarketingModal.m.less
+++ b/app/components-react/windows/MarketingModal.m.less
@@ -8,11 +8,11 @@
   overflow: hidden;
   height: 100%;
   position: relative;
-  width: 45%;
+  width: 49%;
 
   .image-container {
     width: 100%;
-    height: 100px;
+    height: 120px;
     overflow: hidden;
     flex-shrink: 0;
     position: relative;
@@ -58,4 +58,5 @@
 .sub-updates {
   display: flex;
   justify-content: space-between;
+  height: 50%;
 }
