--- a/app/components-react/windows/go-live/GoLive.m.less
+++ b/app/components-react/windows/go-live/GoLive.m.less
@@ -332,6 +332,11 @@ i.destination-logo {
 }
 
 .feature-toggle {
+  display: flex;
+  align-items: center;
+  width: 130px;
+  justify-content: space-between;
+
   :global(.ant-checkbox-wrapper) {
     color: var(--title);
   }
