Port NotificationSettings to React

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -309,18 +309,18 @@ button {
 }
 
 .button--soft-warning {
-  color: var(--warning);
-  background: rgba(251, 72, 76, 0.16);
-  border-color: transparent;
+  color: var(--warning) !important;
+  background: rgba(251, 72, 76, 0.16) !important;
+  border-color: transparent !important;
 
   &:focus {
-    color: var(--warning);
-    background: rgba(251, 72, 76, 0.16);
+    color: var(--warning) !important;
+    background: rgba(251, 72, 76, 0.16) !important;
   }
 
   &:hover {
-    background: rgba(251, 72, 76, 0.2);
-    color: var(--warning);
+    background: rgba(251, 72, 76, 0.2) !important;
+    color: var(--warning) !important;
   }
 }
 
