--- a/app/components-react/windows/go-live/AiHighlighterToggle.m.less
+++ b/app/components-react/windows/go-live/AiHighlighterToggle.m.less
@@ -15,7 +15,7 @@
   border: 1px solid var(--Day-Colors-Dark-4, #4f5e65);
   align-items: center;
   border-radius: 8px;
-  min-height: 80px;
+  min-height: 98px;
   overflow: hidden;
 }
 .colored-blob {
@@ -49,8 +49,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  gap: 2px;
   position: absolute;
-  top: 8px;
+  top: 17px;
 }
 
 .headline-wrapper {
@@ -111,7 +112,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 210px;
+  height: 220px;
   padding-left: 25px;
 }
 
@@ -121,7 +122,7 @@
   position: absolute;
   width: calc(@width / 12);
   height: calc(@height / 12);
-  top: 101px;
+  top: 105px;
   transform: rotate(-5deg);
   overflow: hidden;
   border-radius: 5px;
@@ -133,8 +134,8 @@
   position: absolute;
   height: calc(@width / 12);
   width: calc(@height / 12);
-  top: 75px;
-  left: 170px;
+  top: 85px;
+  left: 200px;
   transform: rotate(2deg);
   overflow: hidden;
   border-radius: 5px;
@@ -149,10 +150,11 @@
 }
 
 .education-section {
-  padding-top: 88px;
+  padding-top: 92px;
+  gap: 5px;
   width: 100%;
   display: flex;
   flex-direction: column;
-  font-size: 19px;
-  font-weight: 700;
+  font-size: 16px;
+  font-weight: 500;
 }
