--- a/app/components-react/windows/go-live/GoLive.m.less
+++ b/app/components-react/windows/go-live/GoLive.m.less
@@ -334,7 +334,7 @@ i.destination-logo {
 .feature-toggle {
   display: flex;
   align-items: center;
-  width: 130px;
+  width: 135px;
   justify-content: space-between;
 
   :global(.ant-checkbox-wrapper) {
@@ -516,4 +516,14 @@ i.destination-logo {
 
 .confirm-btn {
   width: 141.25px;
+}
+
+.toggle-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+
+  &.shiftEnabled {
+    min-height: 50px;
+  }
 }
