--- a/app/components-react/windows/Settings.m.less
+++ b/app/components-react/windows/Settings.m.less
@@ -1,5 +1,5 @@
-@import '../../../styles/index';
-@import '../../../styles/badges';
+@import '../../styles/index';
+@import '../../styles/badges';
 
 .settings {
   & /deep/ h2 {
