Add beta badge.

--- a/app/components-react/shared/StreamShiftToggle.m.less
+++ b/app/components-react/shared/StreamShiftToggle.m.less
@@ -1,4 +1,9 @@
-.stream-switcher-toggle {
+.stream-shift-wrapper {
+  display: inline-flex;
+  align-items: center;
+}
+
+.stream-shift-toggle {
   display: flex;
   flex-direction: row;
   align-items: center;
