--- a/app/components-react/windows/Settings.m.less
+++ b/app/components-react/windows/Settings.m.less
@@ -55,7 +55,8 @@
 }
 
 .settings-nav {
-  margin-bottom: 48px;
+  height: 100%;
+  width: 200px;
 }
 
 .settings-auth {
@@ -91,6 +92,7 @@
 }
 
 .settings-container {
+  height: 100%;
   .input-container,
   .alignable-input {
     flex-direction: column;
