--- a/app/components-react/windows/go-live/DestinationSwitchers.m.less
+++ b/app/components-react/windows/go-live/DestinationSwitchers.m.less
@@ -70,6 +70,7 @@
 .platform-disabled {
   opacity: 0.7;
   background: rgba(#2b383f, 0.3);
+  transition: background 0.4s ease-in-out;
 }
 
 .column-padding {
@@ -93,6 +94,7 @@
 .dual-output-platform-disabled {
   opacity: 0.7;
   background: rgba(#2b383f, 0.3);
+  transition: background 0.4s ease-in-out;
 }
 
 .dual-output-switcher-header {
@@ -193,4 +195,21 @@
   margin-right: 8px;
   vertical-align: super;
   color: var(--title);
+}
+
+.switcher-tooltip {
+  :global(.ant-tooltip-arrow-content) {
+    width: 12px;
+    height: 12px;
+    z-index: 2;
+  }
+
+  :global(.ant-tooltip-placement-right .ant-tooltip-arrow) {
+    left: -2px !important;
+  }
+
+  :global(div.ant-tooltip-inner) {
+    box-shadow: 0 2px 16px -4px rgba(211, 211, 211, 0.274), 0 2px 15px 0 rgba(211, 211, 211, 0.32),
+      0 2px 28px 6px rgba(211, 211, 211, 0.2) !important;
+  }
 }
