Switcher and go live UI. (#5597)
* WIP: switches.

* Advanced go live settings styling.

* Multistream always has switcher enabled. WIP: advanced settings toggle styling.

* Styling polishes.

* Update Stream settings UI.

* Styling and fix start streaming button state.

* Bug fixes and polishes.

* UI polishes.

* Add analytics.

* Switch between devices working.

* Copy polishes.

* Fix already live flow.

* Match target data.

* Remove unused setup target.

* Translation strings.

* Switcher styling.

* Non-ultra destination switchers.

* Add loader to go live button, fix strict nulls, and remove dev noty.

* Remove multistreaming and fix add dest prompt.

* Refactor radio inputs for tests. WIP: dual output test.

* Add more specific logic for non-ultra destination switchers.

* Disable dc protection.

* Noty styling and polishes.

* Fix YouTube chat not showing when multistreaming.

* UI polishes.

* Refine advanced mode conditional.

* Fix switcher using multistream platform settings UI.

* Fix load YouTube switched stream data, theme colors, and add loading spinner.

* WIP: solution for dual output enabled with stream switch.

* Update go live card styling.

* WIP: Highlighter form in switch confirmation modal.

* Update naming.

* Revert cloud shift modal to alert and memoize functions.

* Revert cloud shift modal to alert.

* Fixes to update platforms and primary chat on cloud shift switch.

* Fix Desktop to Desktop dual output cloud shift.

* Remove dependencies.

* Fix UI issues.

* Add logs for debugging populating data after switch.

* Fix strictnulls issue.

* Fix api platform handling.

* Fix cloud shift multistream chat and add cloud shift test.

* Use api to update cloud shift settings and add YouTube stop stream failsafe.

* Comment out YouTube stop stream failsafe.

* Add flag.

* Fix shift facebook.

* Use api for games.

* Add guards for not live platforms.

* Add noty for cloud shift not live platforms.

* Update analytics.

* Radio button inter

--- a/app/components-react/shared/AddDestinationButton.m.less
+++ b/app/components-react/shared/AddDestinationButton.m.less
@@ -51,6 +51,45 @@ button.add-destination-btn {
   }
 }
 
+.info-banner-group {
+  margin-bottom: 0px !important;
+  padding-bottom: 0px !important;
+}
+
+button.info-banner {
+  width: unset !important;
+  padding: 5px !important;
+  margin: 0px 16px;
+  height: fit-content;
+  align-items: flex-start;
+  border-radius: 6px;
+  border-width: 1px;
+
+  .banner-text {
+    font-size: 13px;
+    font-weight: 400;
+    width: 90%;
+    text-align: left;
+    margin-left: 8px;
+    white-space: normal;
+    background-image: linear-gradient(
+      123.53deg,
+      #2de8b0 0%,
+      #cbe953 48.8%,
+      #ffab48 75.86%,
+      #ff5151 100%
+    );
+    background-clip: text;
+    color: transparent;
+  }
+
+  .ultra-icon {
+    margin-top: 4px;
+    height: 12px;
+    width: 12px;
+  }
+}
+
 .default-output-btn:extend(button.add-destination-btn) {
   border: 1px dashed var(--border) !important;
   min-height: 58px;
@@ -73,6 +112,33 @@ button.add-destination-btn {
   .ultra-icon {
     height: 15px;
     width: 15px;
+  }
+}
+
+.small-btn-group {
+  padding: 0px !important;
+}
+
+.small-btn:extend(button.add-destination-btn) {
+  height: 40px !important;
+  font-weight: 500;
+  color: var(--title) !important;
+  text-align: left !important;
+  font-size: 14px;
+  border: 0px !important;
+  background-color: var(--section-alt) !important;
+  margin: 0px 15px !important;
+  width: calc(100% - 30px) !important;
+
+  :global(.anticon.anticon-plus) {
+    font-size: 14px !important;
+    color: var(--title) !important;
+    padding-left: 65px !important;
+  }
+
+  &:hover {
+    transition: 0.3s;
+    background-color: var(--button);
   }
 }
 
