--- a/app/themes.g.less
+++ b/app/themes.g.less
@@ -75,6 +75,15 @@
   --prime-button: @dark-2;
   --tooltip-hover: @light-4;
   --modal-footer: @dark-2;
+  --icon-toggle: @light-5;
+  --icon-toggle-active: @dark-2;
+  --switch-active: @teal-light;
+  --secondary-bg: @light-3;
+  --secondary-checkbox: @dark-2;
+  --bg-column: @light-2;
+  --card: @light-3;
+  --card-active: @light-1;
+  --card-disabled: @light-3;
 
   // 3rd Party Colors
   --twitch: @twitch;
@@ -159,6 +168,15 @@
   --prime-button: @dark-2;
   --tooltip-hover: @dark-5;
   --modal-footer: @dark-2;
+  --icon-toggle: @light-5;
+  --icon-toggle-active: @light-1;
+  --switch-active: @light-1;
+  --secondary-bg: @dark-2;
+  --secondary-checkbox: @light-1;
+  --bg-column: @dark-2;
+  --card: @dark-4;
+  --card-active: @dark-3;
+  --card-disabled: @dark-4;
 
   // 3rd Party Colors
   --tiktok: @black;
@@ -227,6 +245,15 @@
   --prime-button: @dark-2;
   --tooltip-hover: @primedark-4;
   --modal-footer: @primedark-2;
+  --icon-toggle: @light-5;
+  --icon-toggle-active: @primelight-3;
+  --switch-active: @prime-dark;
+  --secondary-bg: @black;
+  --secondary-checkbox: @light-1;
+  --bg-column: @primedark-2;
+  --card: @primedark-1;
+  --card-active: @primedark-4;
+  --card-disabled: @primedark-1;
 
   // 3rd Party Colors
   --tiktok: @black;
@@ -296,6 +323,15 @@
   --prime-button: @dark-2;
   --tooltip-hover: @primelight-4;
   --modal-footer: @primedark-2;
+  --icon-toggle: @light-5;
+  --icon-toggle-active: @dark-2;
+  --switch-active: @prime-light;
+  --secondary-bg: @primelight-1;
+  --secondary-checkbox: @dark-2;
+  --bg-column: @primelight-1;
+  --card: @primelight-3;
+  --card-active: @primelight-2;
+  --card-disabled: @primelight-2;
 
   // 3rd Party Colors
   --tiktok-inverse: @black;
