Revert "Switcher and go live UI. (#5597)"
This reverts commit 6cf0580f3afa7c1f735759cd0cd2738bc14a02cc.

--- a/app/components-react/windows/go-live/RecordingSwitcher.m.less
+++ b/app/components-react/windows/go-live/RecordingSwitcher.m.less
@@ -10,11 +10,36 @@
 }
 
 .recording-switcher {
-  display: flex;
-  justify-content: flex-start;
   flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 
-  :global(.ant-switch-checked) {
-    background-color: var(--title);
+  :global(.ant-row.ant-form-item) {
+    margin-right: 0px !important;
+  }
+
+  :global(.ant-radio-wrapper::after) {
+    width: inherit;
+  }
+
+  :global(.ant-radio-wrapper-checked) {
+    border: none;
+
+    i {
+      color: var(--icon-active);
+      transition: color 0.3s ease-in-out;
+    }
+  }
+
+  :global(.ant-radio) {
+    position: absolute;
+    left: -9999px;
+    overflow: hidden;
+  }
+
+  :global(.ant-radio) + * {
+    padding: 0px;
+    overflow: hidden;
   }
 }
