--- a/app/components-react/windows/go-live/DestinationSwitchers.m.less
+++ b/app/components-react/windows/go-live/DestinationSwitchers.m.less
@@ -2,68 +2,46 @@
 @import '../../../styles/mixins.less';
 
 .destination-logo {
-  font-size: 34px;
+  font-size: 38px;
 }
 .platform-logo-twitch {
-  font-size: 34px;
+  font-size: 40px;
 }
 .platform-logo-youtube {
-  font-size: 31px;
-  margin-top: 9px;
-  width: 34px;
-  height: 34px;
+  font-size: 35px;
+  margin-top: 5px;
 }
 .platform-logo-facebook {
-  font-size: 34px;
+  font-size: 40px;
 }
 .platform-logo-tiktok {
-  font-size: 34px;
+  font-size: 40px;
   margin-left: 5px;
-  width: 34px;
-  height: 34px;
 }
 .platform-logo-instagram {
-  font-size: 34px;
-  width: 34px;
-  height: 34px;
+  font-size: 40px;
 }
 .platform-logo-twitter {
-  width: 32px;
-  height: 32px;
-}
-.platform-logo-kick {
-  width: 34px;
-  height: 34px;
-}
-.platform-logo-trovo {
-  width: 34px;
-  height: 34px;
-}
-
-.platform-logo {
-  align-self: center;
-  display: flex;
-  margin-right: 10px;
-  min-width: 36px;
+  width: 40px;
+  height: 40px;
 }
 
 .platform-switcher {
   .radius();
+  .padding();
 
   display: flex;
-  height: 54px;
-  background: var(--card) !important;
+  height: 60px;
+  background: var(--dropdown-bg);
   transition: transform 0.05s;
   cursor: pointer;
   margin-bottom: 15px;
-  padding: 8px 10px;
 
   .col-input {
-    padding-top: 3px;
+    padding-top: 5px;
     padding-right: 16px;
     width: 52px;
   }
-
   .col-primary {
     color: var(--teal);
     text-align: center;
@@ -71,19 +49,18 @@
 
   .col-account {
     white-space: nowrap;
+    max-width: 130px;
     text-overflow: ellipsis;
     overflow: hidden;
-    align-self: center;
-    flex: 1;
   }
 
   .platform-name {
     color: var(--title);
   }
-}
 
-.switch-wrapper {
-  padding: 0px 15px;
+  &:hover .col-account {
+    color: var(--title);
+  }
 }
 
 .platform-switcher:last-child {
@@ -91,45 +68,121 @@
 }
 
 .platform-disabled {
-  background: var(--card-disabled) !important;
+  opacity: 0.7;
+  background: rgba(#2b383f, 0.3);
 }
 
-.platform-enabled {
-  transition: 0.3 ease-in-out;
-  background: var(--card-active) !important;
+.column-padding {
+  padding: 0px 15px;
 }
 
-.platform-name {
-  font-size: 14px;
+.dual-output-platform-switcher {
+  .radius();
+
+  box-sizing: border-box;
+  display: flex;
+  margin-bottom: 15px;
+  padding: 10px;
+  flex-direction: column;
+  color: var(--title);
+  background: var(--dropdown-bg);
+  transition: transform 0.05s;
+  cursor: pointer;
 }
 
-.platform-handle {
-  font-size: 12px;
-  line-height: 18px;
+.dual-output-platform-disabled {
+  opacity: 0.7;
+  background: rgba(#2b383f, 0.3);
 }
 
-.display-selector-wrapper {
-  align-self: center;
+.dual-output-switcher-header {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+}
+
+.dual-output-platform-info-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.dual-output-platform-info {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  justify-content: space-between;
+}
+
+.dual-output-col-account:extend(.col-account) {
+  flex-direction: column;
+  margin-left: 5px;
+}
+
+.dual-output-platform-name {
+  font-size: 16px;
+  font-weight: 600;
+  margin-left: 5px;
+  width: 100%;
+}
+
+.dual-output-platform-username {
+  color: var(--link);
+  overflow-wrap: break-word;
+  display: inline-block;
+  word-break: break-word;
+  white-space: pre-line;
+  margin-left: 5px;
+}
+
+.dual-output-logo {
+  margin-top: 5px;
 }
 
 .dual-output-display-selector {
   margin-bottom: 0px !important;
-  display: flex;
-  align-self: flex-end;
-  flex: 1;
+}
 
-  :global(.ant-form-item-control-input-content) {
-    min-width: 100px;
-    text-align: right;
-  }
+.single-output-logo {
+  margin-top: 3px;
+}
+
+.dual-output-platform-switch {
+  justify-self: flex-end;
+  color: var(--background);
 
   :global(.ant-form-item-label) {
     display: none;
   }
 
-  :global(.ant-radio-wrapper:last-child::after) {
-    display: none;
+  :global(.ant-switch-small) {
+    min-width: 36px;
+    height: 21px;
+    line-height: 21px;
   }
+
+  :global(.ant-switch-small .ant-switch-handle) {
+    width: 15px;
+    height: 15px;
+    top: 3px;
+    left: 3px;
+  }
+
+  :global(.ant-switch-small.ant-switch-checked .ant-switch-handle) {
+    left: calc(100% - 15px - 3px) !important;
+  }
+
+  :global(.ant-switch-inner i) {
+    color: var(--background);
+    display: flex;
+    align-self: center;
+  }
+}
+
+.dual-output-col-input:extend(.col-input) {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .action-modal-logo {
@@ -140,32 +193,4 @@
   margin-right: 8px;
   vertical-align: super;
   color: var(--title);
-}
-
-.connect-button {
-  align-self: center;
-}
-
-.info-alert {
-  color: #72d5ff;
-  width: 600px;
-  border-radius: 4px;
-  margin: 0 auto;
-  text-align: left !important;
-
-  :global(.ant-message-info) {
-    display: flex;
-    align-items: center;
-  }
-
-  :global(.ant-message-info .anticon) {
-    color: #72d5ff;
-    margin-right: 10px;
-  }
-}
-
-.alert-content {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
 }
