--- a/app/components/shared/SearchablePages.m.less
+++ b/app/components/shared/SearchablePages.m.less
@@ -1,15 +1,15 @@
 
 // a mixin for highlighting
 .highlight() {
-  border: 1px solid var(--prime);
-  box-shadow: 0 0 10px var(--prime);
+  border: 1px solid yellow;
+  box-shadow: 0 0 10px yellow;
 }
 
 .searchable-pages {
   // text
   :global(mark) {
     border-radius: 2px;
-    background: var(--prime);
+    background: yellow;
   }
 
   :global(.search-highlight) {
