Show vertical replays in highlighter clips.

--- a/app/components-react/highlighter/ClipPreview.m.less
+++ b/app/components-react/highlighter/ClipPreview.m.less
@@ -15,6 +15,11 @@
 .preview-image {
   object-fit: none;
   border-radius: 10px;
+
+  &.vertical-preview {
+    margin: 0px 110px;
+    border-radius: unset !important;
+  }
 }
 
 .deleted-preview {
