Update copy and fix translation.

--- a/app/components-react/shared/AddDestinationButton.m.less
+++ b/app/components-react/shared/AddDestinationButton.m.less
@@ -81,12 +81,21 @@ button.info-banner {
     );
     background-clip: text;
     color: transparent;
+    transition: 0.3s !important;
   }
 
   .ultra-icon {
     margin-top: 4px;
     height: 12px;
     width: 12px;
+  }
+
+  .ultra-link {
+    text-decoration: underline !important;
+  }
+
+  &:hover {
+    transition: 0.3s !important;
   }
 }
 
