feat(reactive_widgets): add reactive widget source bp, link apis, UI (wip)

--- a/app/styles/custom-icons.less
+++ b/app/styles/custom-icons.less
@@ -21,6 +21,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.icon-reactive-widgets:before {
+  content: "\ea30";
+}
 .icon-ai:before {
   content: "\ea2f";
 }
