--- a/app/components-react/root/LiveDock.m.less
+++ b/app/components-react/root/LiveDock.m.less
@@ -7,6 +7,10 @@
   box-sizing: border-box;
   height: 100%;
 
+  &.can-animate {
+    transition: width 300ms;
+  }
+
   &.live-dock--left {
     background-color: var(--section);
   }
