Get onboarding to render

--- a/app/components-react/modals/onboarding/Common.m.less
+++ b/app/components-react/modals/onboarding/Common.m.less
@@ -1,3 +1,17 @@
+.modal-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2005 !important; // show above resize bars
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
+  width: 100%;
+}
+
 .dark-box {
   background-color: var(--section);
   border-radius: 16px;
