--- a/app/components-react/modals/onboarding/Common.m.less
+++ b/app/components-react/modals/onboarding/Common.m.less
@@ -1,15 +1,14 @@
 .modal-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2005 !important; // show above resize bars
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80%;
-  width: 100%;
+  height: 80% !important;
+  width: 80% !important;
+
+  :global(.ant-modal-content) {
+    z-index: 2000 !important; // show above everything
+    height: 100% !important;
+  }
 }
 
 .dark-box {
