refactor reactive widget settings (WIP)

--- a/app/components-react/widgets/reactive-widget/ReactiveWidgetMenu.m.less
+++ b/app/components-react/widgets/reactive-widget/ReactiveWidgetMenu.m.less
@@ -6,3 +6,49 @@
     width: 100%;
   }
 }
+
+.game-icon {
+  font-size: 16px;
+  line-height: 16px;
+}
+
+.menu-item {
+  height: 45px;
+  line-height: 45px;
+}
+
+.trigger-row {
+  display: flex;
+}
+
+.trigger-checkbox {
+  display: inline-block;
+}
+
+.trigger-main {
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+}
+
+.trigger-actions {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  height: 100%;
+}
+
+.delete-button {
+  padding: 4.4px 0 !important;
+  width: 16px;
+  color: var(--red) !important;
+}
+
+.delete-icon {
+  font-size: 16px !important;
+}
+
+.play-icon {
+  font-size: 24px !important;
+  color: white !important;
+}
