--- a/app/components-react/root/NotificationsArea.m.less
+++ b/app/components-react/root/NotificationsArea.m.less
@@ -8,6 +8,13 @@
   justify-content: flex-start;
 }
 
+.notification-icon {
+  &:hover {
+    cursor: pointer;
+    color: var(--title) !important;
+  }
+}
+
 .notifications__container {
   position: relative;
   height: 30px;
