Fix beta badge styling.

--- a/app/components-react/shared/DismissableBadge.m.less
+++ b/app/components-react/shared/DismissableBadge.m.less
@@ -3,8 +3,8 @@
 @import '../../styles/badges';
 
 .dismissable-badge {
-  background: var(--new-badge-text);
-  color: var(--titlebar);
+  background: var(--badge);
+  color: var(--black);
   font-size: 9px;
   position: relative;
   padding: 0 2px;
