--- a/app/themes.g.less
+++ b/app/themes.g.less
@@ -32,6 +32,7 @@
   --info-badge: @dark-navy;
   --info-badge-text: @blue-dark;
   --beta-text: @purple-light;
+  --badge: @purple-dark;
   --highlighter-icon: @light-4;
   --ultra: @ultra;
 
@@ -134,6 +135,7 @@
   --info-badge: @dark-navy;
   --info-badge-text: @blue-dark;
   --beta-text: @purple-dark;
+  --badge: @purple-dark;
 
   --background: @dark-3;
   --dark-background: @dark-2;
@@ -211,6 +213,7 @@
   --info-badge: @dark-navy;
   --info-badge-text: @blue-dark;
   --beta-text: @prime-dark;
+  --badge: @purple-dark;
 
   --background: @primedark-3;
   --dark-background: @primedark-2;
@@ -288,6 +291,7 @@
   --info-badge: @dark-navy;
   --info-badge-text: @blue-dark;
   --beta-text: @prime-light;
+  --badge: @purple-dark;
 
   --background: @primelight-1;
   --dark-background: @primelight-2;
