Fix styling for checkbox for all themes.

--- a/app/styles/antd/day-theme.lazy.less
+++ b/app/styles/antd/day-theme.lazy.less
@@ -27,7 +27,6 @@
 @icon-color-hover: @light-5; // var(--icon)
 @heading-color: @dark-2; // var(--title)
 
-
 @component-background: @light-2; // var(--background)
 @popover-background: @light-2; // var(--background)
 @background-color-light: @light-2; // var(--background)
@@ -77,7 +76,6 @@
 @slider-handle-color-focus-shadow: rgba(55, 71, 79, 0.12); // var(--shadow)
 @slider-handle-color-tooltip-open: @light-5; // var(--icon)
 @slider-dot-border-color-active: @light-4; // var(--border)
-
 
 @input-placeholder-color: @dark-4; // var(--paragraph)
 @input-number-handler-active-bg: @dark-4; // var(--paragraph)
@@ -179,6 +177,10 @@
 // ADDITIONAL STYLES
 .ant-modal-footer {
   background-color: @light-3; // var(--section)
+}
+
+.ant-checkbox-inner {
+  background-color: unset;
 }
 
 .ant-checkbox-checked .ant-checkbox-inner::after {
