--- a/app/styles/antd/prime-light.lazy.less
+++ b/app/styles/antd/prime-light.lazy.less
@@ -27,7 +27,6 @@
 @icon-color-hover: @prime-light; // var(--icon)
 @heading-color: @primedark-2; // var(--title)
 
-
 @component-background: @primelight-1; // var(--background)
 @popover-background: @primelight-1; // var(--background)
 @background-color-light: @primelight-1; // var(--background)
@@ -77,7 +76,6 @@
 @slider-handle-color-focus-shadow: rgba(55, 71, 79, 0.12); // var(--shadow)
 @slider-handle-color-tooltip-open: @prime-light; // var(--icon)
 @slider-dot-border-color-active: @primelight-4; // var(--border)
-
 
 @input-placeholder-color: @primedark-4; // var(--paragraph)
 @input-number-handler-active-bg: @primedark-4; // var(--paragraph)
@@ -179,6 +177,10 @@
 // ADDITIONAL STYLES
 .ant-modal-footer {
   background-color: @primelight-2; // var(--section)
+}
+
+.ant-checkbox-inner {
+  background-color: unset;
 }
 
 .ant-checkbox-checked .ant-checkbox-inner::after {
